# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.998 2012/07/30 17:20:34 mpagano Exp $

*gentoo-sources-3.4.7 (30 Jul 2012)

  30 Jul 2012; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.4.7.ebuild:
  Linux patch 3.4.7

*gentoo-sources-3.4.6 (26 Jul 2012)

  26 Jul 2012; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.4.6.ebuild:
  Linux patch 3.4.6

*gentoo-sources-3.5.0 (24 Jul 2012)

  24 Jul 2012; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.5.0.ebuild:
  Zero copy for infiniband psm userspace driver. Fbcondecor bootsplash patch

*gentoo-sources-3.4.5 (17 Jul 2012)

  17 Jul 2012; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.4.5.ebuild:
  Check VBIOS value for determining LVDS dual channel mode. Correct firmware
  version for bnx2 on mips. Bug #424609. Linux patch 3.4.5. Removal of
  redundant patch.

  16 Jul 2012; Jeff Horelick <jdhore@gentoo.org> gentoo-sources-3.3.8.ebuild:
  marked x86 per bug 422715

  15 Jul 2012; Raúl Porcel <armin76@gentoo.org> gentoo-sources-3.0.35.ebuild,
  gentoo-sources-3.2.21.ebuild, gentoo-sources-3.3.8.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #422715 #422713 #412947

  06 Jul 2012; Jeff Horelick <jdhore@gentoo.org> gentoo-sources-3.0.35.ebuild:
  marked x86 per bug 412947

  06 Jul 2012; Jeff Horelick <jdhore@gentoo.org> gentoo-sources-3.2.21.ebuild:
  marked x86 per bug 422713

  29 Jun 2012; Jeroen Roovers <jer@gentoo.org> gentoo-sources-3.3.8.ebuild:
  Stable for HPPA (bug #422715).

*gentoo-sources-3.0.36 (23 Jun 2012)

  23 Jun 2012; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.0.36.ebuild:
  Linux patch 3.0.36

*gentoo-sources-3.4.4 (23 Jun 2012)

  23 Jun 2012; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.4.4.ebuild:
  Linux patch 3.4.4

*gentoo-sources-3.3.8-r1 (21 Jun 2012)
