@@ -21,6 +21,8 @@ DIST genpatches-3.0-26.base.tar.bz2 687952 SHA256 56974f956d582714b06bdc51f183ee
 DIST genpatches-3.0-26.extras.tar.bz2 17200 SHA256 259f669c55dfe9b9420b0e2875af0c404f333961b19e5cdd40d8df5f07fc698b SHA512 db922a9c5dfde235990a168ea97ad66f9c381f0502aa301023b71598c23ac0ac4a3dba97ab6b2637eac270da4cfdf5df31e111cf98a22edf1be130303f32fb9b WHIRLPOOL 987ac2a17d34cfd6c1020b461630fdd21a7ff075447229cfd8b8f7d6c54e8d3583d30a7cde60209c09ee6f1931806e85d3e6eb7a43c5bda067bcc9de1fe820cf
 DIST genpatches-3.0-27.base.tar.bz2 692593 SHA256 5d42f37a0ed68cb65f3c5cdfb566e1cef737145b11e4a26edc48928e07f11635 SHA512 742b68257a44f8d0e2132998b581acddb7339c7713b2e84817ad5ff6922a1187cb3f7c7c0deb92e566f193718b3566ad1cfa93c39acb2eb002ac02e3bbba5949 WHIRLPOOL 2e440280662647359b7f93e4e09c5e01d90b3da91ff014041536c58631a10639135c6fc52aa6f6a7e872fa98eba2feeba79a814166c203924894a69351ee861f
 DIST genpatches-3.0-27.extras.tar.bz2 17200 SHA256 259f669c55dfe9b9420b0e2875af0c404f333961b19e5cdd40d8df5f07fc698b SHA512 db922a9c5dfde235990a168ea97ad66f9c381f0502aa301023b71598c23ac0ac4a3dba97ab6b2637eac270da4cfdf5df31e111cf98a22edf1be130303f32fb9b WHIRLPOOL 987ac2a17d34cfd6c1020b461630fdd21a7ff075447229cfd8b8f7d6c54e8d3583d30a7cde60209c09ee6f1931806e85d3e6eb7a43c5bda067bcc9de1fe820cf
+DIST genpatches-3.0-28.base.tar.bz2 732299 SHA256 557c18ed5f0542135b15ccb8574eb11779402d42a47dee4f3e17a01a4506385b SHA512 161ab65b8f5d073e09183fff8d365b253ab3163973350811cba825481516b0584af05672b97fa05f7031c8d48bd442a1984e7b9292d2b709217936f850195eda WHIRLPOOL 812fb09392a0df6b30b45470d1183b58ff717963ff81df425668f6d89d2460e34411c7ce2694754a7ae2aa37ddbd86be8981b885048a769c94bbd022cce29f2d
+DIST genpatches-3.0-28.extras.tar.bz2 17193 SHA256 86c7a9d4ee419f21b63bfa23b52feb9c4b547a1b29498a752620336776aaff91 SHA512 881140d7c2f8a405a6dc99f99e7ca406877410e7fd19ecf04bc8776d9d594688f6f23a9fc473284c6ae78e44d0c825ef39e705eab70c2f3ec7b6b40feba4bd1a WHIRLPOOL f72f0bd1694369f1fa0a1d74a17447421cbcd9f499f658eb500b5a2405824ef4a36748a83d4164d34c5c9eaca85eb1f526f8604e31ceae1e7b32d305e21bd237
 DIST genpatches-3.1-14.base.tar.bz2 240075 SHA256 fb83da313f48f4adb2955230921e9221696894db711d11a04b91939787a711e4 SHA512 964eff8446fa446362815e07611d62bedba3ec11496cb6e85122cfc3bc1c14e7043c24e7e098b27951537f31f25f5472e521940796e4c62a71994a9e3cd72d17 WHIRLPOOL a7a209a2540d1524af0bffe72b6a1c07153144673670bf11c2aeaf94472eb71ce046d43fb95c1b8be745bcb96dc4b1e6d359434de928878ab18a02b400d6d2cd
 DIST genpatches-3.1-14.extras.tar.bz2 17197 SHA256 aee5dcccb9abc251d31caa0d565b78800cbc8e111cfa02b433cf6ebbdf04d4ea SHA512 28ac7c9238a09b53d8fe3deed05e30c2e18422562f196b06501808dfa2020f8c1b88632d6cd5f87046282d25aa0343a8cd98f889555b66c25e6d390b46a67d94 WHIRLPOOL 4f8a472b7dd294f61525df34d29a28c154e7143ba8a0c9d90b36ef71a273122ed0743105952810ea4d4fc43fe493cdd303ad5c0ba87147de6689fa350f6aa9f8
 DIST genpatches-3.2-12.base.tar.bz2 223146 SHA256 30ffca62f196810c5eb714698bf41e7bede7c42e1ab33924e0f0bd425c3f31c8 SHA512 8f08543e073120d4c4517424d118ae1fececf67081f0bb4a22eb0114ec4be5eca9171ce45cf1b5ccc948e614c97e2755c6f6e71aff40f2501900d68219f9fa41 WHIRLPOOL 7e08fc53983edcbb03adaabaefccd2ee24ca1353cd334add5d6dba218f606948a8a46bc9bf7cede5c491fb7c7fdb3b3298805691e1645213819fbb3109230e6d
@@ -67,6 +69,7 @@ EBUILD gentoo-sources-3.0.17-r2.ebuild 855 SHA256 149ade7aa913fa892dcf7a6346971a
 EBUILD gentoo-sources-3.0.33.ebuild 861 SHA256 ca7725d21c208e03688e8150ad2522e243f2b76515e36fe6bbfe40e7c9b4f2af SHA512 d93c67468a0817a237a06b3dc1003c5716249bccdceba6a7f5d00c2cda2b380b26563eb1b0665a2198274c59b222f225f8c8fd5cdf46a8ff09d6361de3fb31c8 WHIRLPOOL f4995da0a49edea690c77424254e6e5a62829895fd40e8a0e1b35bb00ae20c673b0437c563a0fb7e6fc187048a08aa53dba316b6933a81a19b3ee666a30d1331
 EBUILD gentoo-sources-3.0.35.ebuild 854 SHA256 184af22f24540a13f6b589657c7f2e57a69e0a4080fc63b901fde29e6448428c SHA512 3baef96556be5e891c031df90e6ed18d79c699d37d9c0cf6b174253e7fa86a7bc9c0f7fec6f6060d2c435f4ffcddda32d33f0f6f8a2b1c8fc615059af9cb9edc WHIRLPOOL ba0bea6136ad218343715bc361111d2ebf445d85f5c993ae3912461be4477724fb0d049d9432de9081f1c5fb048460f42d8e4cba0ff791b14c388a6b9d5c2dd1
 EBUILD gentoo-sources-3.0.36.ebuild 861 SHA256 a9f21aa2f71a91c47cc1948c72ad81cdbfb17e7004aa3c94d106e38b3d8fade7 SHA512 265896c62014760565256b9a9c852a3ab2e78d24bb355f358145c6cfe44c6803458cc3f7ec06aa578b560ca53f5d036fc1ad0f0e2284e4226be5517f3f0ca8d9 WHIRLPOOL 267fe6cb1677cd00573be22beb2277178c5bb3e39e98c490f71e52f08f482451ca8c9b09756da751814c19a99c4687014ec014d1576ac1f3080264374d81915c
+EBUILD gentoo-sources-3.0.39.ebuild 861 SHA256 69231ae4a036c8358a1971c3cf5721abbe379179535d899f67d9ccb3dd548663 SHA512 b9ae77e6a6b3f09ce51c2e319a1dd1314cdf89095ff1ce7c0ea80f72104c05b45da55f84ba6450cd36e3835b26a7d3c154c9817f9afbc573244e2480818e5e92 WHIRLPOOL e1e635bdc74f55f4c70b43dc52e19efc24491c24a7bcb40e39f6aa58723260560e3f296433ebe29e5c86e4a7d814e76a07a081f3872bff452e12a57b57f32594
 EBUILD gentoo-sources-3.1.10-r1.ebuild 851 SHA256 4a39a9e97648c3ecdfbbfe23b41f412cd3f4120506c776b3e272f4b85f26d16a SHA512 6a00738c532b3a8c287a93c28dec01a4bd3e99472ffe4df6e8fae5d0f16feeb6be46d1382f04c6e61e031261458c0ff4ef726ceb754cab26c990bc7dfcc2f61b WHIRLPOOL e91063b1685ce3fd1af844442e08c9f4354e88111485ac67370050a90eb8f188fde329f9314ff17ede27026d54e904822d6f500a365f04ae7e9cac39daca6466
 EBUILD gentoo-sources-3.2.1-r2.ebuild 851 SHA256 851caf33e54f86875cf8d39d291360c30aa98d373eba4bf60ccb629b463d159c SHA512 7bdbc15f5017e1f025580344b191c2f26f046360b5b8277a4bfaafdb77ff263070748a04ebccc69b7e4580e6969a839ba6023ea807082dfdd0c86071094c4b44 WHIRLPOOL 15c909db98fea86eaef44caadec5e552a9540be1fbb15dfd8c834863c6dd1f9d46576157fa662dd52511917f08b1631e6a2853c77c2d620808f7c917080580c4
 EBUILD gentoo-sources-3.2.12.ebuild 856 SHA256 0c126ec4380d549d26c725db90cfa87a26d7f43bd8bf210c521367aa070d6d93 SHA512 71c28cd6c2cd438ce27d91792b8992a4ad940b0aabda725088acf8e6f3409e6f4f85e07e971f1de328c309f4bf1ee9d65f781faa3df7f0ddf02cc533f105ca63 WHIRLPOOL 614dd3311cc813cf092bd9e0bf476f8d24cde774b0272e3cfaf073f70dd789140d959060ea840488244e07634d1ff2936f8fa7cbb9778e771ba469dd85621d8f
@@ -85,12 +88,12 @@ EBUILD gentoo-sources-3.4.5.ebuild 859 SHA256 86b308fad07f871798169fb2c3373734dd
 EBUILD gentoo-sources-3.4.6.ebuild 859 SHA256 40f0936db5c2982e69409b0f33604244eb58bf663cdd97ff908fbe131ab3b25f SHA512 eb0d03cf00a5b23ba2888c7b090358975d32107ed4de8f9b69a31cc5c9a2dd2a7f1def78861918d689dd2a6e4020b0222202d712a1f8a06b48856220ea3434c9 WHIRLPOOL d09c5017e29d1591d79567cbed94b8ce33b7366dcf91a975c9b41d71744de827c9430bd10374cfa1d95782df17ee0ed28474cdc9deb24c819405e3025d55e21f
 EBUILD gentoo-sources-3.4.7.ebuild 859 SHA256 6f995b881b617b73801ac577e9eee57a7f615f3ad6e3a7c25b7ed0812f3bcf5e SHA512 8b7e544c55b4d6045fc902c48475b110d77280e352dc64bb9f5d2f0a89ffd64fb00a40b45a2dc8a867fdda79eff2de5d43840c6644bee9da7b2e90aa7857ec18 WHIRLPOOL 21e8a58ca1cfbf792a5b433e36f87cee5dc7dfde6a00c02362168c9d2170fa112163e10f752b4b608928b0c779d13cb67df90972cbd5d91360c08b63a0a0899b
 EBUILD gentoo-sources-3.5.0.ebuild 859 SHA256 cbb5489b240d39ab21944649cf53873270242b22a952035b826d62d0d92b48cc SHA512 75d1afa39ffc4dac570a150b6d8dcef1f2a0349907d6610f2eb267f38d101a52fa826df6accf2c853791603a2e325780a62e6bf137e8902cbff7ed9eed7193a2 WHIRLPOOL eb6defe8595a3b6ab1abcd90bb27696f55445ba40d4315b02ab9950e41e894f2f5a04ee6bdb3d1c38e3053bfcb789a739792288489cd387d7e87d4d543e3802d
-MISC ChangeLog 48171 SHA256 782e516430eb79396628d19718a30a1f5c68c1bed7c37b6511e3925c8e77d385 SHA512 6e285310d69c155a46dea6d4caffc24edc46bc7a90e3665dde246fcc6614e43900bd13e9516ef604769c483bb1b853b8e1c498ae49b093284ce9a9253d35a0a3 WHIRLPOOL b7a3719ae4b72997b81acb3dbb9186fe2703fb57c757b031c91d772ca09f45d5ae29fb6e17c5f188ae9839ef0458a6f4d4ba11e5476927e55b87cc993af8c784
+MISC ChangeLog 48336 SHA256 5b0be0db44333910cf1872e0d851b882f29532b13f77cef3337acb07fcfd8c06 SHA512 23dc6759efe443f681d9c04fbe0b7b1a1c36c563fa0b88e6eaae63a39e3108f2cc84e94f9d6590a06851296fd7489ee87b61d83bdabc4ef14284f0cc77216013 WHIRLPOOL 8272eb7b09563fe0d75fa736aa8e37c47fd0e3890d4a076bb8477f0d6854b5914aa7e15a8ebdd9334aed45b9bc4febb8d8bd10c13709944f43271285c702d521
 MISC metadata.xml 278 SHA256 2b556f98e8912903385bf20c7f6d0568be62196d2b12d31a7b2eec0d13781d34 SHA512 5ff7b398c4ada3bba50cdb5640e81b15c316487e5aa99b9802a15b7fb90270b5dd36aa5b415069124e722484b72c4ec789f66c3663acb413272b0d762a6d5001 WHIRLPOOL 958b0dd1701235c7a175c017ddf8c31467dab9de3f6aeb722473304c735055969b02868a678f27865038d12b4b93436457a1f1c40b9401123864b687c7bd23f7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlAWwpoACgkQPDPGULV25OOHeACfRE/1PNwV2tY0iHVjstHUOJUT
-BL4AniSIz+llH5X166QvYKawCkK5/K/l
-=tm5K
+iEYEAREIAAYFAlAbCEUACgkQPDPGULV25OOyUQCeO817nZKht6lN5RJ3TW+FP3LR
+SlgAn1gqlV7adcklnGBnK1hu4xuVQji6
+=HhgR
 -----END PGP SIGNATURE-----
