@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.998 2012/07/30 17:20:34 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.999 2012/08/02 23:07:31 mpagano Exp $
+
+*gentoo-sources-3.0.39 (02 Aug 2012)
+
+  02 Aug 2012; Michael Pagano <mpagano@gentoo.org>
+  +gentoo-sources-3.0.39.ebuild:
+  Linux patches 3.0.37, 3.0.38 and 3.0.39
 
 *gentoo-sources-3.4.7 (30 Jul 2012)
 
